--- a/vignettes/singlecellutils-filtering.Rmd
+++ b/vignettes/singlecellutils-filtering.Rmd
@@ -12,8 +12,10 @@ vignette: >
 ---
 
 ```{r setup, include = FALSE}
+library(magrittr)
 knitr::opts_chunk$set(
   collapse = TRUE,
+  message = FALSE,
   comment = "#>"
 )
 if(!requireNamespace("BiocStyle", quietly = TRUE)) {
